# simple_renderer

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  common.hpp  hello_world_triangle_pipeline.cpp  hello_world_triangle_pipeline.hpp  input.cpp  input.hpp  main.cpp  pipeline.hpp  window.cpp  window.hpp
